fixing alignment of info

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -41,6 +41,8 @@ a:link {
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
 .infoButtons {
